//protoc --go_opt=paths=source_relative --go_out=./ ./protobuf/*.proto

syntax = "proto3";
package models;

message ProtoArgs {
  repeated Argument args = 1;

  message Argument {
    bytes value = 1;
    bool is_nil = 2;
  }
}

message Action {
  uint32 action_type = 1;
  bytes amount = 2;
  string method = 3;
  bytes args = 4;
  uint64 gas_limit = 5;
  bytes code = 6;
  bytes nonce = 7;
  bytes key = 8; // addr or key for reading sharded data
}

message ActionResult {
  Action input_action = 1;
  bool success = 2;
  string error = 3;
  uint64 gas_used = 4;
  uint64 remaining_gas = 5;
  bytes output_data = 6;
  repeated ActionResult sub_action_results = 7;
}

